<resources>
    <string name="hangqinghang_fragment_trade1">自選</string>
    <string name="hangqinghang_fragment_trade2">標準區</string>
    <string name="hangqinghang_fragment_trade3">進取區</string>
    <string name="hangqingguideWebActivity10">客服</string>
    <string name="hangqinghang_fragment_trade100">數量</string>
    <string name="hangqingguideWebActivity11">快捷買幣</string>
    <string name="hangqinghang_fragment_hangqing510">發佈廣告</string>
    <string name="hangqinghang_fragment_hangqing610">輕鬆購買數字資產</string>
    <string name="hangqinghang_fragment_hangqing530">商家自由交易</string>
    <string name="hangqinghang_activity_market_scroll40">合約</string>
    <string name="hangqinghang_recy_item_trade40">方向</string>
    <string name="hangqinghang_recy_item_trade20">時間</string>
    <string name="hangqinghang_recy_item_zixun60">比特幣市場關於恢復充幣提幣業務升級的公告</string>
    <string name="hangqinghang_fragment_summary290">白皮書</string>
    <string name="hangqinghang_fragment_summary150">發行總量</string>
    <string name="hangqingmarketActivity2">成交</string>
    <string name="hangqingmarketActivity3">簡介</string>
    <string name="hangqingguideWebActivity1">幫助中心</string>
    <string name="hangqingmarketActivity1">買賣盤</string>
    <string name="hangqingchartFragment5">月線</string>
    <string name="hangqingchartFragment4">周線</string>
    <string name="hangqingchartFragment3">更多</string>
    <string name="hangqingguideWebActivity4">關於我們</string>
    <string name="hangqingchartFragment2">日線</string>
    <string name="hangqingzixunFragment2">交易指南</string>
    <string name="hangqingguideWebActivity5">服務協議</string>
    <string name="hangqingchartFragment1">分時</string>
    <string name="hangqingguideWebActivity2">幣幣交易</string>
    <string name="hangqingguideWebActivity3">法幣交易</string>
    <string name="hangqinghang_activity_market_scroll450">最高價</string>
    <string name="hangqingguideWebActivity8">反洗錢</string>
    <string name="hangqinghang_fragment_chart170">指標</string>
    <string name="hangqingguideWebActivity9">行業資訊</string>
    <string name="hangqingguideWebActivity6">隱私條款</string>
    <string name="hangqingguideWebActivity7">交易規則</string>
    <string name="hangqingtradeFragment2">數量(%s)</string>
    <string name="hangqinghang_fragment_hangqing460">我們爲您提供更多幫助</string>
    <string name="hangqinghang_fragment_hangqing680">資產行情</string>
    <string name="hangqingtradeFragment1">價格(%s)</string>
    <string name="hangqinghang_fragment_trade80">價格</string>
    <string name="hangqinghang_fragment_summary220">流通總量</string>
    <string name="hangqinghang_fragment_deepth300">賣盤</string>
    <string name="hangqinghang_activity_market_scroll700">買入</string>
    <string name="hangqinghang_activity_market_scroll701">賣出</string>
    <string name="hangqinghang_fragment_deepth120">做多</string>
    <string name="hangqinghang_activity_market_scroll520">最低價</string>
    <string name="hangqinghang_activity_market_scroll521">24h量</string>
    <string name="hangqinghang_fragment_deepth240">價格(USDT)</string>
    <string name="hangqinghang_fragment_summary80">發行時間</string>
    <string name="hangqinghang_fragment_deepth160">做空</string>
    <string name="hangqinghang_fragment_deepth260">買盤</string>
    <string name="hangqinggonggaoListActivity1">平臺公告</string>
    <string name="hangqinggonggaoListActivity2">公告詳情</string>
    <string name="hang_hang_fragment_coin1300">交易對</string>
    <string name="hang_hang_fragment_coin150">最新價</string>
    <string name="hang_hang_activity_market_scroll350">漲幅榜</string>
    <string name="hang_bibi_change">幣幣交易</string>
    <string name="hang_asserts_list">資產列表</string>
    <string name="hang_help_center">幫助中心</string>
    <string name="hang_yqoqinghaoyou">邀請好友</string>
    <string name="hang_haoyou">邀請好友得返傭</string>
    <string name="hang_inf">資訊</string>
    <string name="hang_name">名稱</string>
    <string name="hang_new">最新價</string>
    <string name="hang_chengjiao">24H成交榜</string>
    <string name="hang_solo">搜索交易對</string>
    <string name="hang_fabi">閃兌</string>
    <string name="hang_zhifu">多種支付方式</string>
    <string name="hang_kuaisu">快速買賣數字資產</string>
    <string name="hang_tiantian">天天抽獎</string>
    <string name="hang_yaoqing">邀請好友</string>
    <string name="hang_zhang">漲幅榜</string>
    <string name="hang_chengbang">成交榜</string>
    <string name="hang_login_pwd">登錄密碼</string>
    <string name="hang_update">修改</string>
    <string name="hang_jiaoyi_pwd">交易密碼</string>
    <string name="hang_phone_bind">手機綁定</string>
    <string name="hang_email_bind">郵箱綁定</string>
    <string name="hang_goole_bind">谷歌綁定</string>
    <string name="hang_shenfenrenzheng">身份認證</string>
    <string name="hang_pay_setting">支付設置</string>
    <string name="hang_shoushi">手勢密碼</string>
    <string name="hang_question_type">問題類型</string>
    <string name="hang_500">請輸入申訴內容，不超過500字符</string>
    <string name="hang_3_jpg_png_jpeg_2m">可傳3張(非必須)只支持jpg/png/jpeg格式文件，且不超過2M</string>
    <string name="hang_daizhifu">待支付</string>
    <string name="hang_type">類型</string>
    <string name="hang_jiaoyijine">交易金額</string>
    <string name="hang_jiaoyishuliang">交易數量</string>
    <string name="hang_xiadan_time">下單時間</string>
    <string name="hang_order_num">訂單號</string>
    <string name="hang_chakan">查看</string>
    <string name="hang_status">狀態</string>
    <string name="hang_time">時間</string>
    <string name="hang_gongdan">工單編號</string>
    <string name="hang_gongdan_status">工單狀態</string>
    <string name="hang_kefu">客服已回覆</string>
    <string name="hang_gongdan_type">工單類型</string>
    <string name="hang_shiming">實名認證</string>
    <string name="hang_tijiao_time">提交時間</string>
    <string name="hang_my_miaoshu">我的描述</string>
    <string name="hang_miaosu_content">描述內容</string>
    <string name="hang_shiming_no">實名認證不通過</string>
    <string name="hang_kefu_huifu">客服回覆</string>
    <string name="hang_huifu_shijian">回覆時間</string>
    <string name="hang_huifu_neirong">回覆內容</string>
    <string name="hang_zuijia">追加問題</string>
    <string name="hang_dianji_chakan">點擊查看</string>
    <string name="hang_google_yanzheng">開啓 谷歌驗證</string>
    <string name="hang_buzou">步驟四</string>
    <string name="hang_qiyong_google">啓用您的谷歌驗證</string>
    <string name="hang_google_mishi">谷歌密鑰</string>
    <string name="hang_google">谷歌驗證</string>
    <string name="hang_sure">確定</string>
    <string name="hang_shangyibu">上一步</string>
    <string name="hang_next">下一步</string>
    <string name="hang_kaiqi_shenfenrenzheng">開啓身份認證</string>
    <string name="hang_youxiaozhengjian">上傳有效證件</string>
    <string name="hang_shangchuan">上傳證件封面</string>
    <string name="hang_shangchuangeren">上傳個人信息頁</string>
    <string name="hang_shangchuanshouchi">上傳手持證件頁</string>
    <string name="hang_shouchizhengjian">手持證件頁要求:</string>
    <string name="hang_zhengjian_content">請您上傳一張手持證件個人信息頁證明和個人簽字的照片，個人簽名的內容包含平臺 網站，真實姓名和當日日期，請確保照片和個人簽字內容清晰可見。 </string>
    <string name="hang_buzou1">步驟一</string>
    <string name="hang_select_country">選擇國籍</string>
    <string name="hang_buzou3">步驟三</string>
    <string name="hang_youxiaocotent">填寫您有效證件基本信息</string>
    <string name="hang_user_name">姓名</string>
    <string name="hang_zhengjian_num">證件號碼</string>
    <string name="hang_buzou2">步驟二</string>
    <string name="hang_xuanzenin">選擇您要上傳的證件類型</string>
    <string name="hang_huzhaorenzheng">護照認證</string>
    <string name="hang_shenfenzhengrenzheng">身份證認證</string>
    <string name="hang_all_read">全部標記已讀</string>
    <string name="hang_jinqu">進取區</string>
    <string name="hang_fabi_order">法幣訂單</string>
    <string name="hangApp">選擇谷歌驗證 APP</string>
    <string name="hang_next_aready">已下載,下一步</string>
    <string name="hang_beifen">請備份您的密鑰</string>
    <string name="hang_7">如忘記密鑰提交工單充值谷歌驗證,至少需要花費7天時間</string>
    <string name="hang_sao">如果您無法掃描二維碼，請在APP中手動輸入這串字符</string>
    <string name="hang_setting">設置</string>
    <string name="hang_yuyan">語言</string>
    <string name="hang_fabi_jijia">法幣計價</string>
    <string name="hang_banben">版本</string>
    <string name="hang_logout">退出登錄</string>
    <string name="hang_setting_content">設置內容</string>
    <string name="hang_zhuce">註冊/登錄</string>
    <string name="hangMitcion">歡迎使用Yolocoin</string>
    <string name="hang_cong">充幣</string>
    <string name="hang_tibi">提幣</string>
    <string name="hang_submit">提交</string>
    <string name="hang_huazhuan">劃轉</string>
    <string name="hang_bibi_order">幣幣訂單</string>
    <string name="hang_zijin">資金流水</string>
    <string name="hang_safety">賬戶安全</string>
    <string name="hang_xiaoxi">消息中心</string>
    <string name="hang_lianxikefu">聯繫客服</string>
    <string name="hang_yijian">意見反饋</string>
    <string name="hang_gonggao">公告</string>
    <string name="hang_myyaoqing">我的邀請人</string>
    <string name="hang_cancel">取消</string>
    <string name="hang_update_email">修改綁定郵箱號</string>
    <string name="hang_shuruemail_num">請輸入郵箱號</string>
    <string name="hang_updata_phone">修改綁定手機號</string>
    <string name="hang_shuruphone">請輸入手機號</string>
    <string name="hang_fenxiang">分享</string>
    <string name="hang_save">保存</string>
    <string name="hang_shendu">深度圖</string>
    <string name="hang_qing">行情</string>
    <string name="hang_username">用戶名</string>
    <string name="hang_weixin">微信賬號</string>
    <string name="hang_shuru">請輸入</string>
    <string name="hang_shangcuan">上傳微信收款碼</string>
    <string name="hang_qushangchuan">去上傳</string>
    <string name="hang_save1">保存</string>
    <string name="hang_bank_name">銀行名稱</string>
    <string name="hang_yinhang_num">銀行卡號</string>
    <string name="hang_kaihuyinhang">開戶銀行</string>
    <string name="hang_pay_num">支付寶賬號</string>
    <string name="hang_shangchuanpay">上傳支付寶收款碼</string>
    <string name="hang_upload">去上傳</string>
    <string name="hang_xiugai">修改登錄密碼</string>
    <string name="hang_8">至少8個字符，必須包含字母及數字</string>
    <string name="hang_24">修改安全項後,24小時不可以提幣</string>
    <string name="hang_yuanmima">原密碼</string>
    <string name="hang_new_mima">新密碼</string>
    <string name="hang_sure_pwd">確認新密碼</string>
    <string name="hang_xiugai_trad">修改交易密碼</string>
    <string name="hang_6">設置6位純數字交易密碼</string>
    <string name="hang_xiugai_content">修改安全項後,24小時不可以提幣</string>
    <string name="hang_input_again">請再次輸入交易密碼</string>
    <string name="hang_chakan_erweima">查看二維碼</string>
    <string name="hangMitcion_login">cattle farm網頁端登錄確認</string>
    <string name="hangMitcion_yunxu">是否允許當前Yolocoin賬號登錄網頁端</string>
    <string name="hang_login">登錄</string>
    <string name="hang_back">返回</string>
    <string name="hang_dangqian">當前委託</string>
    <string name="hang_lishi">歷史記錄</string>
    <string name="hang_yishiming">已實名認證</string>
    <string name="hang_weishiming">未實名認證</string>
    <string name="hang_yao">邀請</string>
    <string name="hang_shengcheng">一鍵生成推廣海報</string>
    <string name="hang_haoyou1">邀請好友</string>
    <string name="hang_yaoqing_code">邀請碼</string>
    <string name="hang_lianjie">邀請碼鏈接</string>
    <string name="hang_yaoqing_num">邀請總人數</string>
    <string name="hang_yirenzheng">已認證人數</string>
    <string name="hang_yaoqing_record">邀請記錄</string>
    <string name="hang_username1">用戶名</string>
    <string name="hang_register">註冊時間</string>
    <string name="hang_status1">狀態</string>
    <string name="hang_fuzhi_success">複製成功</string>
    <string name="hang_yangniu">Yolocoin</string>
    <string name="hang_yao_qing">邀请好友</string>
    <string name="hang_deyong">得佣金</string>
    <string name="hang_lianxi">联系客服</string>
    <string name="hang_already">已经认证</string>
    <string name="hang_real_name">请先进行实名认证</string>
    <string name="hang_set">去设置</string>
    <string name="hang_hang_update">修改</string>
    <string name="hang_bind_phone">绑定手机号</string>
    <string name="hang_account_safe">账户安全</string>
    <string name="hang_bind_email">绑定邮箱</string>
    <string name="hang_unbind">未绑定</string>
    <string name="hang_bind">解绑</string>
    <string name="hang_unready">未认证</string>
    <string name="hang_shenhezhong">审核中</string>
</resources>