<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/libBgDeep"
    android:paddingStart="30pt"
    android:paddingEnd="30pt"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">
   <include layout="@layout/lib_include_head" />
<com.allen.library.SuperTextView
    android:id="@+id/tv_denglu"
    android:layout_width="match_parent"
    app:sLeftTextString="@string/hang_login_pwd"
    app:sLeftTextColor="@color/libTextWhite"
    app:sRightTextString="@string/hang_update"
    app:sRightTextColor="@color/libTextWhite"
    app:sRightIconRes="@mipmap/hang_youjiantou"
    android:layout_weight="1"
    android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_jiaoyi"
       android:layout_width="match_parent"
       app:sLeftTextString="@string/hang_jiaoyi_pwd"
       app:sLeftTextColor="@color/libTextWhite"
       app:sRightTextString="@string/hang_update"
       app:sRightTextColor="@color/libTextWhite"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_phonebind"
       android:layout_width="match_parent"
       app:sLeftTextString="@string/hang_phone_bind"
       app:sLeftTextColor="@color/libTextWhite"
       app:sRightTextString="@string/hang_update"
       app:sRightTextColor="@color/libTextWhite"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_emailbind"
       android:layout_width="match_parent"
       app:sLeftTextString="@string/hang_email_bind"
       app:sLeftTextColor="@color/libTextWhite"
       app:sRightTextString="@string/hang_update"
       app:sRightTextColor="@color/libTextWhite"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_guge"
       android:layout_width="match_parent"
       app:sLeftTextString="@string/hang_goole_bind"
       app:sLeftTextColor="@color/libTextWhite"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_shenfen"
       android:layout_width="match_parent"
       app:sLeftTextString="@string/hang_shenfenrenzheng"
       app:sLeftTextColor="@color/libTextWhite"
       app:sRightTextColor="@color/libTextWhite"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_pay"
       android:layout_width="match_parent"
       app:sLeftTextString="@string/hang_pay_setting"
       app:sLeftTextColor="@color/libTextWhite"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_shoushi"
       android:layout_width="match_parent"
       app:sLeftTextString="@string/hang_shoushi"
       app:sLeftTextColor="@color/libTextWhite"
       android:visibility="invisible"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_zhiwen"
       android:layout_width="match_parent"
       app:sLeftTextString="指纹登录"
       app:sLeftTextColor="@color/libTextWhite"
       android:visibility="invisible"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_denglulishi"
       android:layout_width="match_parent"
       app:sLeftTextString="登录历史"
       app:sLeftTextColor="@color/libTextWhite"
       android:visibility="invisible"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_setting"
       android:layout_width="match_parent"
       app:sLeftTextString="安全设置历史"
       app:sLeftTextColor="@color/libTextWhite"
       android:visibility="invisible"
       app:sRightIconRes="@mipmap/hang_youjiantou"
       android:layout_weight="1"
       android:layout_height="0dp"/>
   <com.allen.library.SuperTextView
       android:id="@+id/tv_changyong"
       android:layout_width="match_parent"
       app:sLeftTextString="常用设备"
       app:sLeftTextColor="@color/libTextWhite"
       app:sRightTextString="绑定"
       android:visibility="invisible"
       android:layout_weight="1"
       android:layout_height="0dp"/>
</LinearLayout>
