<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:text="@string/hang_chakan_erweima"
        android:textColor="@color/libText_3"
        android:layout_marginTop="20pt"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="300pt"
        android:layout_marginTop="50pt"
        android:src="@mipmap/hang_pc"
        android:layout_gravity="center"
        android:layout_height="300pt"/>
    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:text="@string/hangMitcion_login"
        android:textSize="30pt"
        android:textColor="@color/libTextWhite"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50pt"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_marginTop="30pt"
        android:text="@string/hangMitcion_yunxu"
        android:textColor="@color/libTextWhite"
        android:textSize="26pt"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_denglu"
        android:layout_width="match_parent"
        android:text="@string/hang_login"
        android:layout_marginStart="30pt"
        android:layout_marginEnd="30pt"
        android:background="@color/libGreen1"
        android:textColor="@color/libTextWhite"
        android:layout_gravity="center"
        android:paddingTop="10pt"
        android:paddingBottom="10pt"
        android:gravity="center"
        android:layout_marginTop="30pt"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:text="@string/hang_back"
        android:textColor="@color/libTextWhite"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30pt"
        android:layout_height="wrap_content"/>
</LinearLayout>
