<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/libBgDeep"
    android:paddingStart="30pt"
    android:paddingEnd="30pt"
    android:orientation="vertical"
    android:layout_marginTop="290pt"
    tools:ignore="MissingDefaultResource">
   <include layout="@layout/lib_include_head" />
<TextView
    android:id="@+id/tv_title"
    android:layout_width="wrap_content"
    android:text="@string/hang_google_yanzheng"
    android:textColor="@color/libTextWhite"
    android:textSize="50pt"
    android:textStyle="bold"
    android:layout_marginTop="50pt"
    android:layout_marginStart="10pt"
    android:layout_height="wrap_content"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_marginStart="10pt"
       android:layout_marginTop="20pt"
       android:layout_height="wrap_content">
      <TextView
          android:id="@+id/tv_buzou"
          android:layout_width="wrap_content"
          android:text="@string/hang_buzou"
          android:textColor="@color/libTextWhite"
          android:textSize="30pt"
          android:layout_height="wrap_content"/>
      <TextView
          android:id="@+id/tv_xuanze"
          android:layout_width="wrap_content"
          android:text="@string/hang_qiyong_google"
          android:textColor="@color/libTextWhite"
          android:textSize="30pt"
          android:layout_marginStart="30pt"
          android:layout_height="wrap_content"/>
   </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/et_miyao"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        android:layout_marginTop="50pt"
        android:hint="@string/hang_google_mishi"
        android:background="@null"
        android:textColor="@color/libTextWhite"
        android:layout_width="0pt"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/imageeye"
        android:layout_width="30pt"
        android:layout_gravity="bottom"
        android:src="@mipmap/login_biyan"
        android:layout_height="30pt"/>
</LinearLayout>

   <View
       android:layout_width="match_parent"
       android:layout_marginTop="15pt"
       android:layout_marginStart="10pt"
       android:layout_marginEnd="10pt"
       android:background="@color/libTextGray"
       android:layout_height="1pt"/>
    <TextView
        android:id="@+id/tv_guge"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        android:layout_marginTop="50pt"
        android:text="@string/hang_google"
        android:textSize="30pt"
        android:textColor="@color/libTextWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.sskj.lib.ui.view.PhoneCode
        android:id="@+id/phonecode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40pt"
        android:layout_marginLeft="20pt"
        android:layout_marginRight="20pt"/>

    <Button
        android:id="@+id/logout_btn"
        style="@style/libButtonStyle"
        android:layout_marginLeft="50pt"
        android:layout_marginTop="100pt"
        android:layout_marginRight="50pt"
        android:text="@string/hang_sure" />

    <Button
        android:id="@+id/logout_btn1"
        android:layout_height="80pt"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/lib_button_cancel"
        android:layout_marginTop="30pt"
        android:layout_marginLeft="50pt"
        android:layout_marginRight="50pt"
        android:textColor="@color/libApp"
        android:text="@string/hang_shangyibu" />
</LinearLayout>
