<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/libBgDeep"
    android:paddingStart="30pt"
    android:paddingEnd="30pt"
    android:orientation="vertical"
    android:layout_marginTop="290pt"
    tools:ignore="MissingDefaultResource">
   <include layout="@layout/lib_include_head" />
<TextView
    android:id="@+id/tv_title"
    android:layout_width="wrap_content"
    android:text="@string/hang_kaiqi_shenfenrenzheng"
    android:textColor="@color/libTextWhite"
    android:textSize="@dimen/hang_identify_titlle"
    android:textStyle="bold"
    android:layout_marginTop="50pt"
    android:layout_marginStart="10pt"
    android:layout_height="wrap_content"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_marginStart="10pt"
       android:layout_marginTop="20pt"
       android:layout_height="wrap_content">
      <TextView
          android:id="@+id/tv_buzou"
          android:layout_width="wrap_content"
          android:text="@string/hang_buzou3"
          android:textColor="@color/libTextWhite"
          android:textSize="@dimen/hang_second_title"
          android:layout_height="wrap_content"/>
      <TextView
          android:id="@+id/tv_xuanze"
          android:layout_width="wrap_content"
          android:text="@string/hang_youxiaocotent"
          android:textColor="@color/libTextGray"
          android:textSize="@dimen/hang_second_title"
          android:layout_marginStart="30pt"
          android:layout_height="wrap_content"/>
   </LinearLayout>

    <EditText
        android:id="@+id/et_name"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        android:layout_marginTop="50pt"
        android:hint="@string/hang_user_name"
        android:background="@null"
        android:textColor="@color/libTextWhite"
        android:textColorHint="@color/libTextGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   <View
       android:layout_width="match_parent"
       android:layout_marginTop="15pt"
       android:layout_marginStart="10pt"
       android:layout_marginEnd="10pt"
       android:background="@color/libTextGray"
       android:layout_height="1pt"/>
    <EditText
        android:id="@+id/et_zhengjianhao"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        android:layout_marginTop="50pt"
        android:hint="@string/hang_zhengjian_num"
        android:textColor="@color/libTextWhite"
        android:background="@null"
        android:textColorHint="@color/libTextGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="15pt"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        android:background="@color/libTextGray"
        android:layout_height="1pt"/>
   <Button
       android:id="@+id/logout_btn"
       style="@style/libButtonStyle"
       android:layout_marginLeft="50pt"
       android:layout_marginTop="100pt"
       android:layout_marginRight="50pt"
       android:text="@string/hang_next" />
</LinearLayout>
