<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/libBgDeep"
    android:paddingStart="30pt"
    android:paddingEnd="30pt"
    android:orientation="vertical"
    android:layout_marginTop="290pt"
    tools:ignore="MissingDefaultResource">
   <include layout="@layout/lib_include_head" />
<TextView
    android:id="@+id/tv_title"
    android:layout_width="wrap_content"
    android:text="@string/hang_kaiqi_shenfenrenzheng"
    android:textColor="@color/libTextWhite"
    android:textSize="@dimen/hang_identify_titlle"
    android:textStyle="bold"
    android:layout_marginTop="50pt"
    android:layout_marginStart="10pt"
    android:layout_height="wrap_content"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_marginStart="10pt"
       android:layout_marginTop="20pt"
       android:layout_height="wrap_content">
      <TextView
          android:id="@+id/tv_buzou"
          android:layout_width="wrap_content"
          android:text="@string/hang_buzou"
          android:textColor="@color/libTextWhite"
          android:textSize="@dimen/hang_second_title"
          android:layout_height="wrap_content"/>
      <TextView
          android:id="@+id/tv_xuanze"
          android:layout_width="wrap_content"
          android:text="@string/hang_youxiaozhengjian"
          android:textColor="@color/libTextGray"
          android:textSize="@dimen/hang_second_title"
          android:layout_marginStart="30pt"
          android:layout_height="wrap_content"/>
   </LinearLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
  <LinearLayout
      android:id="@+id/ll_image1"
      android:layout_width="match_parent"
      android:layout_marginStart="10pt"
      android:layout_marginEnd="10pt"
      android:padding="10pt"
      android:background="@drawable/hang_shape_5e8_corner_new1"
      android:gravity="center"
      android:layout_gravity="center"
      android:layout_marginTop="50pt"
      android:orientation="horizontal"
      android:layout_height="300pt">
      <ImageView
          android:id="@+id/image1"
          android:layout_width="60pt"
          android:src="@mipmap/hang_shangchuandiqiu1"
          android:layout_gravity="center"
          android:layout_height="60pt"/>
     <TextView
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:text="@string/hang_shangchuan"
         android:textSize="32pt"
         android:gravity="center"
         android:layout_marginStart="60pt"
         android:textColor="@color/libTextGray"
         android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/image11"
        android:layout_width="400pt"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_height="300pt"/>
  </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_image2"
        android:layout_width="match_parent"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        android:padding="10pt"
        android:background="@drawable/hang_shape_5e8_corner_new1"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20pt"
        android:orientation="horizontal"
        android:layout_height="300pt">
        <ImageView
            android:id="@+id/image2"
            android:layout_width="60pt"
            android:src="@mipmap/hang_gerenxinxi"
            android:layout_gravity="center"
            android:layout_height="60pt"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:text="@string/hang_shangchuangeren"
            android:textSize="32pt"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="60pt"
            android:textColor="@color/libTextGray"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/image22"
            android:layout_width="400pt"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_height="300pt"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_image3"
        android:layout_width="match_parent"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        android:gravity="center"
        android:padding="10pt"
        android:background="@drawable/hang_shape_5e8_corner_new1"
        android:layout_gravity="center"
        android:layout_marginTop="20pt"
        android:orientation="horizontal"
        android:layout_height="300pt">
        <ImageView
            android:id="@+id/image3"
            android:layout_width="60pt"
            android:src="@mipmap/hang_shoucihuzhao"
            android:layout_gravity="center"
            android:layout_height="60pt"/>
        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:text="@string/hang_shangchuanshouchi"
            android:textSize="32pt"
            android:gravity="center"
            android:layout_marginStart="60pt"
            android:textColor="@color/libTextGray"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/image33"
            android:layout_width="400pt"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_height="300pt"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="20pt"
        android:text="@string/hang_shouchizhengjian"
        android:textColor="@color/libTextGray"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10pt"
        android:text="@string/hang_zhengjian_content"
        android:textColor="@color/libTextGray"
        android:layout_height="wrap_content"/>
   <Button
       android:id="@+id/logout_btn"
       style="@style/libButtonStyle"
       android:layout_marginLeft="50pt"
       android:layout_marginTop="100pt"
       android:layout_marginBottom="40pt"
       android:layout_marginRight="50pt"
       android:text="@string/hang_submit" />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
